# deep-mock

./: README.md  deepmock.py  pyproject.toml
utils/: generate_response.py  system_prompt_generator.py
